@startuml
title 회계 관리 솔루션 - infrastructure layer

package "Applicaiton Layer" {
    package "port.out" {
        interface AccountRepository {
        }
    }
}

package "Infrastructure Layer" {
    package "persistence.account" {
        class AccountJpaEntity {
            -id: Long
            -code: String
            -name: String
            -type: AccountType
            -parentId: Long?
            -isActive: Boolean
            -createdAt: LocalDateTime
            -updatedAt: LocalDateTime
            +toDomain(): Account
            +fromDomain(account: Account): AccountJpaEntity
        }

        interface AccountJpaRepository {
            +findByCode(code: String): AccountJpaEntity?
            +findByType(type: AccountType): List<AccountJpaEntity>
            +findByIsActiveTrue(): List<AccountJpaEntity>
            +findByParentId(parentId: Long): List<AccountJpaEntity>
            +existsByCode(code: String): Boolean
            +findAllActiveOrderByCode(): List<AccountJpaEntity>
        }

        class AccountRepositoryImpl {
            -jpaRepository: AccountJpaRepository
            +save(account: Account): Account
            +findById(id: AccountId): Account?
            +findByCode(code: String): Account?
            +findByType(type: AccountType): List<Account>
            +findAllActive(): List<Account>
            +findByParentId(parentId: AccountId): List<Account>
            +existsByCode(code: String): Boolean
            +delete(id: AccountId)
        }
    }
}
AccountRepository <|.. AccountRepositoryImpl : implements
AccountRepositoryImpl ||--|| AccountJpaRepository : uses
AccountJpaRepository ||--o{ AccountJpaEntity : manages
@enduml